[package]
name = "obvious3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["tokio"] }
object_store = "0.11.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
